--- a/index.html
+++ b/index.html
@@ -760,6 +760,11 @@
     <div class="lockHead">
       <h2 class="lockTitle">推しメーカーを使うには合言葉が必要です</h2>
       <p class="lockNote">※合言葉は定期的に更新されます</p>
+
+<p style="margin:8px 0 0;font-size:13px;font-weight:900;color:#d40000;line-height:1.4;">
+⚠️フォロワー限定公開予定です<br>
+必ずTiktokのフォローをお願いします⚠️
+</p>
     </div>
     <div class="lockBody">
       <p class="lockLabel">合言葉を入力</p>
